test/JDBC/expected/sp_statistics_100.out
create table t1(a int)
go

create index i1 on t1(a)
go

create table t2(a int, b int not null primary key)
go

create index i2 on t2(a,b)
go

create table t3(a int)
go

-- syntax error: @table_name is required
exec [sys].sp_statistics_100
go
~~ERROR (Code: 201)~~

~~ERROR (Message: procedure sys.sp_statistics_100 expects parameter "@table_name", which was not supplied.)~~


exec [sys].sp_statistics_100 @table_name = 't1'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
master#!#dbo#!#t1#!#1#!#t1#!#i1#!#3#!#1#!#a#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#t1#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#0#!#<NULL>
~~END~~


exec [sys].sp_statistics_100 @table_name = 't2', @table_owner = 'dbo'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
master#!#dbo#!#t2#!#0#!#t2#!#t2_pkey#!#3#!#1#!#b#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#t2#!#1#!#t2#!#i2#!#3#!#1#!#a#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#t2#!#1#!#t2#!#i2#!#3#!#2#!#b#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#t2#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#0#!#<NULL>
~~END~~


exec [sys].sp_statistics_100 @table_name = 't2', @table_qualifier = 'master'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
master#!#dbo#!#t2#!#0#!#t2#!#t2_pkey#!#3#!#1#!#b#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#t2#!#1#!#t2#!#i2#!#3#!#1#!#a#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#t2#!#1#!#t2#!#i2#!#3#!#2#!#b#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#t2#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#0#!#<NULL>
~~END~~


exec [sys].sp_statistics_100 't1', 'dbo'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
master#!#dbo#!#t1#!#1#!#t1#!#i1#!#3#!#1#!#a#!#A#!#<NULL>#!#0#!#<NULL>
master#!#dbo#!#t1#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#0#!#<NULL>
~~END~~


exec [sys].sp_statistics_100 @table_name = 't3'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
master#!#dbo#!#t3#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#<NULL>#!#<NULL>#!#<NULL>#!#0#!#0#!#<NULL>
~~END~~


create database db1
go

use db1
go

exec [sys].sp_statistics_100 @table_name = 't2', @table_owner = 'dbo'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
~~END~~


exec [sys].sp_statistics_100 @table_name = 't1', @table_qualifier = 'master'
go
~~START~~
varchar#!#varchar#!#varchar#!#smallint#!#varchar#!#varchar#!#smallint#!#smallint#!#varchar#!#varchar#!#int#!#int#!#varchar
~~END~~


use master
go

--cleanup
drop index i1 on t1
go

drop index i2 on t2
go

drop table t1
go

drop table t2
go

drop table t3
go

drop database db1
go


